--- a/ap-server/src/main/resources/application.properties
+++ b/ap-server/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 # Server
 server.port=8008
-
 server.servlet.contextPath=/apserver
 
 # Database
@@ -12,5 +11,5 @@ spring.datasource.password=admin
 # Hibernate
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.show_sql: true
-spring.jpa.properties.hibernate.hbm2ddl.auto: create
+spring.jpa.properties.hibernate.hbm2ddl.auto: update
 spring.jpa.properties.hibernate.entitymanager.packagesToScan: com.gxh.apserver
