--- a/ap-client/package.json
+++ b/ap-client/package.json
@@ -20,10 +20,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@swimlane/ngx-datatable": "^13.0.1",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
     "ng2-completer": "^2.0.8",
-    "ng2-smart-table": "^1.3.5",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
     "zone.js": "^0.8.26"
