--- a/ap-client/package.json
+++ b/ap-client/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^6.0.3",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
-    "ng2-table": "^1.3.2",
+    "jquery": "^3.3.1",
+    "ng2-nouislider": "^1.7.12",
+    "nouislider": "^11.1.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
