--- a/ap-client/package.json
+++ b/ap-client/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ng2-nouislider": "^1.7.12",
+    "ngx-modal-dialog": "^3.0.0",
     "nouislider": "^11.1.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
