--- a/ap-client/package.json
+++ b/ap-client/package.json
@@ -24,7 +24,9 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ng2-nouislider": "^1.7.12",
+    "ng2-search-filter": "^0.4.7",
     "ngx-modal-dialog": "^3.0.0",
+    "ngx-pagination": "^3.2.0",
     "nouislider": "^11.1.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
