--- a/ap-client/package.json
+++ b/ap-client/package.json
@@ -29,6 +29,7 @@
     "ngx-pagination": "^3.2.0",
     "nouislider": "^11.1.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
