--- a/ap-server/pom.xml
+++ b/ap-server/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.gxh</groupId>
 	<artifactId>ap-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>ap-server</name>
 	<description>Demo project for Spring Boot</description>
