db password changed for prod

--- a/ap-server/src/main/resources/application.properties
+++ b/ap-server/src/main/resources/application.properties
@@ -6,8 +6,10 @@ server.servlet.contextPath=/apserver
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/gxhdb?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=admin
-
+#dev
+#spring.datasource.password=admin
+#prod
+spring.datasource.password=f27202de4ff569532501c7226257444a6cd325321b1179ac
 # Hibernate
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.show_sql: true
