--- a/ap-server/pom.xml
+++ b/ap-server/pom.xml
@@ -25,12 +25,12 @@
 	</properties>
 
 	<dependencies>
-		<!-- Required for deploy -->
-		<dependency>
+		<!-- Required for prod deployment : comment for development-->
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
