--- a/ap-client/package.json
+++ b/ap-client/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.3.1",
     "ng2-nouislider": "^1.7.12",
     "ng2-search-filter": "^0.4.7",
+    "ng2-smart-table": "^1.3.5",
     "ngx-modal-dialog": "^3.0.0",
     "ngx-pagination": "^3.2.0",
     "nouislider": "^11.1.0",
@@ -34,10 +35,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -50,8 +50,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng2-completer": "^2.0.8",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
