--- a/ap-client/package.json
+++ b/ap-client/package.json
@@ -29,6 +29,7 @@
     "ng2-smart-table": "^1.3.5",
     "ngx-modal-dialog": "^3.0.0",
     "ngx-pagination": "^3.2.0",
+    "ngx-toastr": "^9.0.2",
     "nouislider": "^11.1.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
