--- a/ap-server/pom.xml
+++ b/ap-server/pom.xml
@@ -26,11 +26,11 @@
 
 	<dependencies>
 		<!-- Required for prod deployment : comment for development-->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
